# CluedoBot

./: CMakeLists.txt  CluedoCard.cpp  CluedoCard.h  CluedoEntry.cpp  CluedoEntry.h  CluedoProgress.cpp  CluedoProgress.h  DSSentence.cpp  DSSentence.h  Player.cpp  Player.h  UI.cpp  UI.h  main.cpp
